Closed Bug 242588 Opened 22 years ago Closed 22 years ago

r:\mozilla\extensions\cookie\nsCookiePermission.h(65) : warning C4244: 'initializing' : conversion from 'PRInt64' to 'PRUint8', possible loss of data

Categories

(Core :: Networking: Cookies, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: timeless, Assigned: dwitte)

References

()

Details

Attachments

(1 file)

r:\mozilla\extensions\cookie\nsCookiePermission.h(65) : warning C4244: 'initializing' : conversion from 'PRInt64' to 'PRUint8', possible loss of data 60 , mCookiesLifetimePolicy(LL_MAXINT) 75 PRUint8 mCookiesLifetimePolicy; // pref for how long cookies are stored
Attached patch tsk tskSplinter Review
Comment on attachment 147650 [details] [diff] [review] tsk tsk i could just ask darin for r+sr here, but i want the fun of making mconnor review it, so he doesn't do this again. :)
Attachment #147650 - Flags: superreview?(darin)
Attachment #147650 - Flags: review?(mconnor)
Attachment #147650 - Flags: superreview?(darin) → superreview+
Comment on attachment 147650 [details] [diff] [review] tsk tsk hey, you reviewed it, Mr. C++ is easy :)
Attachment #147650 - Flags: review?(mconnor) → review+
Assignee: mconnor → dwitte
yeah, i know, was worth a try though ;) checked in.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: