fix a build warning. b=242588, r=mconnor, sr=darin